[package]
name = "led-animation-controller"
version = "0.1.0"
authors = ["Brian Vanderbusch <chief@hackerhappyhour.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smart-leds = "0.3.0"

[profile.dev]
opt-level = 3
